input[type=time] and input[type=datetime-local] should not accept milliseconds with 4+ digits.

Modify DateComponents::parseTime to reject values with >3 fractional decimal places.
New behavior matches to the specification and Firefox behavor.

https://html.spec.whatwg.org/multipage/infrastructure.html#times

BUG=683041

Review-Url: https://codereview.chromium.org/2678343007
Cr-Commit-Position: refs/heads/master@{#449109}

Former-commit-id: 925b3122a05d1ecaeedc8780a05089de19a6990a